--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,22 @@ version = "0.1.0"
 authors = ["Maru <maru40137@gmail.com>"]
 edition = "2018"
 
+license = "MIT/Apache-2.0"
+repository = "https://github.com/Maru0137/ps2dq5-sim"
+description = "A library for simulation PS2 Dragon Quest V"
+readme = "README.md"
+keywards = ["dq5"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[lib]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 csv = "1.1.3"
 lazy_static = "1.4.0"
 num-traits = "0.2.12"
 rand = "0.7.3"
+serde = "1.0.114"
+serde_derive = "1.0.114"
+wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"]}
